help: Fix left sidebar content in smaller window.
This fixes an issue where some of the content of left
sidebar gets visible even in smaller window which looks ugly.

Fixes: #10898.

--- a/static/styles/portico.scss
+++ b/static/styles/portico.scss
@@ -1846,10 +1846,17 @@ input.new-organization-button {
         transition: all 0.3s ease;
     }
 
+    .help .sidebar .content:not(.show) {
+        visibility: hidden;
+    }
+
     .app.help .sidebar.show {
         pointer-events: initial;
         transform: translateX(calc(100% - 50px));
         overflow: auto;
+        .content {
+            visibility: visible;
+        }
     }
 
     .app.help .sidebar.show + .hamburger {
@@ -2177,4 +2184,34 @@ input.new-organization-button {
 #third-party-apps {
     margin-top: 20px;
     padding-right: 10px;
+}
+
+#realm_redirect_subdomain {
+    text-align: right;
+    position: relative;
+    padding-right: 10px;
+}
+
+#realm_redirect_external_host {
+    font-size: 20px;
+    top: 13px;
+    left: 5px;
+    position: relative;
+}
+
+#realm_redirect_description {
+    top: 15px;
+    position: relative;
+}
+
+.realm-redirect-form #find-account-link {
+    color: hsl(165, 100.0%, 14.7%);
+}
+
+.realm-redirect-form #find-account-section {
+    margin-top: 20px;
+}
+
+.realm-redirect-form #enter-realm-button {
+    margin-top: 10px;
 }
